Додання функції кнопки

--- a/css/style.css
+++ b/css/style.css
@@ -273,7 +273,7 @@ textarea {
 }
 
 .button:hover{
-    background-color: #D6457F;
+    background-color: #f75d9a;
     color: rgb(71, 227, 255);
     border: 2px solid #5C3A21 ;
 }
